--- a/Pong.vcxproj
+++ b/Pong.vcxproj
@@ -90,7 +90,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>dep/SDL/lib/Win32/</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2_mixer.lib;SDL2.lib;SDL2main.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -109,7 +109,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>dep/SDL/lib/Win32/</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2_mixer.lib;SDL2.lib;SDL2main.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -124,7 +124,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>dep/SDL/lib/x64/</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2_mixer.lib;SDL2.lib;SDL2main.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -143,11 +143,115 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>dep/SDL/lib/x64/</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2_mixer.lib;SDL2.lib;SDL2main.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="lose.bmp" />
+    <Image Include="realwin.bmp" />
+    <Image Include="title.bmp" />
+    <Image Include="win.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="dep\SDL\include\begin_code.h" />
+    <ClInclude Include="dep\SDL\include\close_code.h" />
+    <ClInclude Include="dep\SDL\include\SDL.h" />
+    <ClInclude Include="dep\SDL\include\SDL_assert.h" />
+    <ClInclude Include="dep\SDL\include\SDL_atomic.h" />
+    <ClInclude Include="dep\SDL\include\SDL_audio.h" />
+    <ClInclude Include="dep\SDL\include\SDL_bits.h" />
+    <ClInclude Include="dep\SDL\include\SDL_blendmode.h" />
+    <ClInclude Include="dep\SDL\include\SDL_clipboard.h" />
+    <ClInclude Include="dep\SDL\include\SDL_config.h" />
+    <ClInclude Include="dep\SDL\include\SDL_config_android.h" />
+    <ClInclude Include="dep\SDL\include\SDL_config_iphoneos.h" />
+    <ClInclude Include="dep\SDL\include\SDL_config_macosx.h" />
+    <ClInclude Include="dep\SDL\include\SDL_config_minimal.h" />
+    <ClInclude Include="dep\SDL\include\SDL_config_pandora.h" />
+    <ClInclude Include="dep\SDL\include\SDL_config_psp.h" />
+    <ClInclude Include="dep\SDL\include\SDL_config_windows.h" />
+    <ClInclude Include="dep\SDL\include\SDL_config_winrt.h" />
+    <ClInclude Include="dep\SDL\include\SDL_config_wiz.h" />
+    <ClInclude Include="dep\SDL\include\SDL_copying.h" />
+    <ClInclude Include="dep\SDL\include\SDL_cpuinfo.h" />
+    <ClInclude Include="dep\SDL\include\SDL_egl.h" />
+    <ClInclude Include="dep\SDL\include\SDL_endian.h" />
+    <ClInclude Include="dep\SDL\include\SDL_error.h" />
+    <ClInclude Include="dep\SDL\include\SDL_events.h" />
+    <ClInclude Include="dep\SDL\include\SDL_filesystem.h" />
+    <ClInclude Include="dep\SDL\include\SDL_gamecontroller.h" />
+    <ClInclude Include="dep\SDL\include\SDL_gesture.h" />
+    <ClInclude Include="dep\SDL\include\SDL_haptic.h" />
+    <ClInclude Include="dep\SDL\include\SDL_hidapi.h" />
+    <ClInclude Include="dep\SDL\include\SDL_hints.h" />
+    <ClInclude Include="dep\SDL\include\SDL_joystick.h" />
+    <ClInclude Include="dep\SDL\include\SDL_keyboard.h" />
+    <ClInclude Include="dep\SDL\include\SDL_keycode.h" />
+    <ClInclude Include="dep\SDL\include\SDL_loadso.h" />
+    <ClInclude Include="dep\SDL\include\SDL_locale.h" />
+    <ClInclude Include="dep\SDL\include\SDL_log.h" />
+    <ClInclude Include="dep\SDL\include\SDL_main.h" />
+    <ClInclude Include="dep\SDL\include\SDL_messagebox.h" />
+    <ClInclude Include="dep\SDL\include\SDL_metal.h" />
+    <ClInclude Include="dep\SDL\include\SDL_misc.h" />
+    <ClInclude Include="dep\SDL\include\SDL_mouse.h" />
+    <ClInclude Include="dep\SDL\include\SDL_mutex.h" />
+    <ClInclude Include="dep\SDL\include\SDL_name.h" />
+    <ClInclude Include="dep\SDL\include\SDL_opengl.h" />
+    <ClInclude Include="dep\SDL\include\SDL_opengles.h" />
+    <ClInclude Include="dep\SDL\include\SDL_opengles2.h" />
+    <ClInclude Include="dep\SDL\include\SDL_opengles2_gl2.h" />
+    <ClInclude Include="dep\SDL\include\SDL_opengles2_gl2ext.h" />
+    <ClInclude Include="dep\SDL\include\SDL_opengles2_gl2platform.h" />
+    <ClInclude Include="dep\SDL\include\SDL_opengles2_khrplatform.h" />
+    <ClInclude Include="dep\SDL\include\SDL_opengl_glext.h" />
+    <ClInclude Include="dep\SDL\include\SDL_pixels.h" />
+    <ClInclude Include="dep\SDL\include\SDL_platform.h" />
+    <ClInclude Include="dep\SDL\include\SDL_power.h" />
+    <ClInclude Include="dep\SDL\include\SDL_quit.h" />
+    <ClInclude Include="dep\SDL\include\SDL_rect.h" />
+    <ClInclude Include="dep\SDL\include\SDL_render.h" />
+    <ClInclude Include="dep\SDL\include\SDL_revision.h" />
+    <ClInclude Include="dep\SDL\include\SDL_rwops.h" />
+    <ClInclude Include="dep\SDL\include\SDL_scancode.h" />
+    <ClInclude Include="dep\SDL\include\SDL_sensor.h" />
+    <ClInclude Include="dep\SDL\include\SDL_shape.h" />
+    <ClInclude Include="dep\SDL\include\SDL_stdinc.h" />
+    <ClInclude Include="dep\SDL\include\SDL_surface.h" />
+    <ClInclude Include="dep\SDL\include\SDL_system.h" />
+    <ClInclude Include="dep\SDL\include\SDL_syswm.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_assert.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_common.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_compare.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_crc32.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_font.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_fuzzer.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_harness.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_images.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_log.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_md5.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_memory.h" />
+    <ClInclude Include="dep\SDL\include\SDL_test_random.h" />
+    <ClInclude Include="dep\SDL\include\SDL_thread.h" />
+    <ClInclude Include="dep\SDL\include\SDL_timer.h" />
+    <ClInclude Include="dep\SDL\include\SDL_touch.h" />
+    <ClInclude Include="dep\SDL\include\SDL_types.h" />
+    <ClInclude Include="dep\SDL\include\SDL_version.h" />
+    <ClInclude Include="dep\SDL\include\SDL_video.h" />
+    <ClInclude Include="dep\SDL\include\SDL_vulkan.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="sound\aipoint.wav" />
+    <Media Include="sound\bounce.wav" />
+    <Media Include="sound\gameover.wav" />
+    <Media Include="sound\lose.wav" />
+    <Media Include="sound\title_screen.wav" />
+    <Media Include="sound\userpoint.wav" />
+    <Media Include="sound\win.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
